# plomp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
build_scripts/: compile_frontend.py
examples/: README.md  basic_example.py  query_example.py
frontend/: PLAN.md  index.html  package.json  tsconfig.json  vite.config.ts  webpack.config.js
frontend/src/: App.tsx  index.css  index.ts  main.ts  main.tsx  styles.css  types.ts  ui-components.ts  utils.ts
frontend/src/_old_version/: constants.ts  event-handlers.ts  models.ts  timeline-renderer.ts  utils.ts
frontend/src/components/: DetailSidebar.tsx  Header.tsx  PlaybackControls.tsx  TimelineItem.tsx  TimelineView.tsx
frontend/src/utils/: keyboardNavigation.ts  playbackController.ts
frontend/src/vite-plugins/: dev-data-plugin.js  sample-buffer-data.json
plomp/: __init__.py  _query.py  core.py  serve.py
plomp/resources/templates/: buffer_viewer.css  buffer_viewer.html  buffer_viewer.js  bundle.js  index.html
tests/: test_basic.py  test_core.py  test_progress.py  test_serve.py
