[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plomp"
version = "0.1.0"
description = "Plomp Python Module"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Giba", email = "michaelgiba@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/michaelgiba/plomp"
"Bug Tracker" = "https://github.com/michaelgiba/plomp/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=22.0",
    "isort>=5.10",
    "mypy>=0.950",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
plomp = ["resources/**/*"]
